# qdyn

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INCAR  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
config/: jf_base.yaml.example  jf_qdyn.yaml  qdyn.yaml  qdyn.yaml.example
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/fonts/: LICENSE
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: admin.ts  auth.ts  http.ts  schema.ts  structures.ts  tasks.ts  types.ts
frontend/src/components/: .gitkeep  AppHeader.vue  ConfigImporter.vue  DynamicStepForm.vue  FieldWidget.vue  FormatSelect.vue  JobExpandedRow.vue  JobMdTimeseriesPanel.vue  JobStepTimeline.vue  PoscarUploader.vue  ResumeTaskSelector.vue  StatusBadge.vue  StepSelector.vue  StructureUploader.vue  StructureViewer.vue  TaskCard.vue  TrajectoryUploader.vue
frontend/src/composables/: useFileSelection.ts  usePolling.ts
frontend/src/constants/: steps.ts  validation.ts
frontend/src/layouts/: AdminLayout.vue
frontend/src/pages/: .gitkeep  LoginPage.vue  RegisterPage.vue  SubmitTaskPage.vue  TaskDetailPage.vue  TaskListPage.vue
frontend/src/pages/admin/: AuditLogPage.vue  DashboardPage.vue  FilesPage.vue  LogsPage.vue  TasksPage.vue  TrajectoriesPage.vue  UsersPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: .gitkeep  auth.ts  tasks.ts  theme.ts
frontend/src/styles/: qdyn-theme.css
frontend/src/utils/: format.ts  incar-descriptions.ts  schema-form.ts  task-display.ts
namd_server_test/: config.py  namd.py  nohup.out  postprocess.py  prepare.py  run_workflow_test.py  slurm_manager.py  utils.py  workflow_manager.py
namd_server_test/AHFNAMD/: astart.sh  bandcalculate.sh  jobsettings.sh  namd.sh  nve.sh  nvt.sh  pc.sh  queue.sh  scf.sh  sr.sh  zend.sh
namd_server_test/AHFNAMD/Scripts/: continue.sh  down_plot.py  e_t.py  fixinput.sh  generate_inicon.py  genescf.py  ksen_from_outcar.py  par.sh  plot.py  plot_horizon.py  readwavecar.py  recomb.py  t_nac.py  up_plot.py  wavevisual.sh
namd_server_test/scripts/: Dephase.py  dist.py  input.py  namd_sub  poen_fssh.py  population.py  python_sub  sub_vasp  tdksen.py  vaspT.py  vaspscf
namd_server_test/templates/: index.html  status.html
namd_server_test/templates/NAMD/: 5_dishinp  5_fsshinp
namd_server_test/templates/VASP/: 1_SRincar  2_NVTincar  3_NVEincar  4_SCFincar  INCAR
scripts/: generate_jf_config.py
src/: app.py  constants.py  input.py  input_prepare.py  job_initialize.py  job_manager.py  main_workflow.py  output_postprocess.py  params.py
src/auth/: __init__.py  database.py  dependencies.py  models.py  router.py
src/qdyn/: __init__.py  api_common.py  app.py  calc_common.py  database.py  errors.py  input.py  input_prepare.py  main_workflow.py  output_postprocess.py  params.py  pool.py  queue_poller.py  resources.py  validation.py
src/qdyn/admin/: __init__.py  file_index_cache.py  models.py  router.py  service.py  storage_cache.py
src/qdyn/auth/: __init__.py  dependencies.py  models.py  router.py  security.py
src/qdyn/frontend_api/: __init__.py  _common.py  files.py  job_inputs.py  md_timeseries.py  models.py  preview.py  progress.py  router.py  run_dir_access.py  service.py  structure_preview.py  task_status.py
src/qdyn/ml_tools/: hamgnn_wrapper.py  mlff_wrapper.py
src/qdyn/tools/: canac.py  dephase.py  fused_scf_prenamd.py  mlff_wrapper.py  namd.py  nve.py  nvt.py  prepare_namd.py  pseuh.py  run_software.py  scf.py  seldyn.py
src/qdyn/tools/libcanac/: abacuswfc.py  aeolap.py  cp2kwfc.py  hamgnnwfc.py
src/scripts/: __init__.py  download_pretrained_models.py  generate_jf_config.py  qdyn_cli.py
src/tools/: canac.py  dephase.py  namd.py  nve.py  nvt.py  output.py  prepare_namd.py  run_software.py  run_vasp.py  scf.py
src/tools/libcanac/: abacuswfc.py  aeolap.py  hamgnnhugewfc.py  hamgnnwfc.py  hamnetwfc.py  mod_hungarian.py  siestawfc.py  utils.py
tests/: test_auth.py
tests/qdyn/: test_app_config_defaults.py  test_auth.py  test_calc_common.py  test_download_pretrained_models.py  test_frontend_api_run_dir_access.py  test_frontend_api_scf_progress.py  test_frontend_api_service.py  test_generate_jf_config.py  test_hamgnn_wrapper.py  test_main_workflow.py  test_nvt_convergence.py  test_pseuh.py  test_pseuh_nvt.py  test_remote.py  test_run_software.py  test_structure_preview.py
