[project]
name = "qdyn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.27.0",
    "fastapi>=0.135.1",
    "jobflow>=0.3.1",
    "jobflow-remote>=1.0.0",
    "jupyter>=1.1.1",
    "natsort>=8.4.0",
    "pymatgen>=2025.10.7",
    "uvicorn>=0.41.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
