[project]
name = "qdyn"
version = "0.1.0"
description = "A toolkit for non-adiabatic quasiparticle dynamics"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "jobflow>=0.3.1",
    # Temporary pin for upstream PR #466 (https://github.com/Matgenix/jobflow-remote/pull/466)
    # This fork mirrors the PR content; switch back to upstream after merge.
    "jobflow-remote @ git+https://github.com/bud-primordium/jobflow-remote.git@b3e7694",
    "fastapi>=0.135.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.41.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "numpy>=2.2.6",
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "ase>=3.28.0",
    "pymatgen>=2025.10.7",
    "pydantic>=2.12.5",
    "psutil>=7.2.2",
    "pyvaspwfc",
    "natsort>=8.4.0",
]

[project.optional-dependencies]
ml = [
    "e3nn>=0.6.0",
    "easydict>=1.13",
    "lightning>=2.6.1",
    "nequip>=0.17.0",
    "scikit-learn>=1.7.2",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
    "torch-runstats>=0.2.0",
    "torch_geometric>=2.6.0",
    "pyg-lib>=0.4.0 ; sys_platform == 'linux'",
    "torch-cluster>=1.6.3 ; sys_platform == 'linux'",
    "torch-scatter>=2.1.2 ; sys_platform == 'linux'",
    "torch-sparse>=0.6.18 ; sys_platform == 'linux'",
    "mace-torch>=0.3.15",
    "torch-dftd>=0.5.3",
    "hamgnn>=2.1.0",
]
openmx = [
    "qdyn-openmx-postprocess",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "jupyter>=1.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
find-links = [
    "https://data.pyg.org/whl/torch-2.5.1+cu124.html",
]
override-dependencies = [
    "e3nn>=0.6.0",
]

[tool.uv.sources]
qdyn-openmx-postprocess = { path = "packages/qdyn-openmx-postprocess" }
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
]
pyvaspwfc = { git = "https://github.com/QijingZheng/VaspBandUnfolding" }
hamgnn = { git = "https://github.com/QuantumLab-ZY/HamGNN" }

[tool.uv.extra-build-dependencies]
torch-cluster = ["torch"]
torch-scatter = ["torch"]
torch-sparse = ["torch"]
